# spartan-framework

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt
app/exceptions/: __init__.py  dynamodb.py
app/helpers/: context.py  dynamodb.py  environment.py
app/helpers/logger/: stream.py
app/services/logging/: factory.py  gcloud.py  gcloud_improved.py
app/services/tracing/: factory.py  gcloud.py
config/: storage.py
docs/: .gitignore  README.md
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: app.exceptions.rst  app.helpers.logger.rst  app.helpers.rst  app.helpers.tracer.rst  app.middlewares.rst  app.models.rst  app.requests.rst  app.responses.rst  app.rst  app.services.rst  config.rst  handlers.rst  modules.rst
handlers/: inference.py  pubsub.py
tests/integration/: test_inference_handler.py
tests/unit/: test_app_config.py  test_both_logger.py  test_cloud_logger.py  test_cloud_tracer.py  test_ddb_helper.py  test_file_logger.py  test_gcloud_improved.py  test_gcloud_logger.py  test_helpers_tracer.py  test_local_tracer.py  test_logging_gcloud.py  test_main.py  test_tracer_service.py  test_tracing_factory.py  test_tracing_gcloud.py
